@@ -1,5 +1,13 @@
 2011-02-25  Murray Cumming  <murrayc@murrayc.com>
 
+	Adapt to libgdamm API change.
+
+	* glom/libglom/connectionpool.cc:
+	* glom/libglom/db_utils.cc: Adapt to the libgdamm change to use vector 
+	instead of list.
+
+2011-02-25  Murray Cumming  <murrayc@murrayc.com>
+
 	Avoid GTK+ warning when clicking on the list button.
 
 	* glom/mode_data/db_adddel/db_adddel.[h|cc]: on_cell_button_clicked(): 
